--- a/11/debian-9/Dockerfile
+++ b/11/debian-9/Dockerfile
@@ -13,7 +13,7 @@ RUN echo 'en_GB.UTF-8 UTF-8' >> /etc/locale.gen && locale-gen
 RUN echo 'en_US.UTF-8 UTF-8' >> /etc/locale.gen && locale-gen
 RUN . ./libcomponent.sh && component_unpack "postgresql" "11.2.0-0" --checksum 9e1a4e02db6b41240d735830b263a1d7190aa55bcf82e664069dc28b4d8ae035
 COPY rootfs /
-RUN /prepare.sh
+RUN /post-unpack.sh
 
 ENV BITNAMI_APP_NAME="postgresql" \
     BITNAMI_IMAGE_VERSION="11.2.0-debian-9-r68" \
